--- a/components/ui/AdminNavbar/AdminNavbar.module.css
+++ b/components/ui/AdminNavbar/AdminNavbar.module.css
@@ -1,9 +1,9 @@
 .root {
-  @apply sticky top-0 bg-white z-40 transition-all duration-150;
+  @apply w-full fixed top-0 bg-black z-40 transition-all duration-150 rounded-full;
 }
 
 .link {
-  @apply inline-flex items-center leading-6 font-medium transition ease-in-out duration-75 cursor-pointer text-black rounded-md p-1;
+  @apply inline-flex items-center leading-6 font-medium transition ease-in-out duration-75 cursor-pointer text-yellow-500 rounded-md p-1;
 }
 
 .link:hover {
