--- a/components/ui/AdminNavbar/AdminNavbar.module.css
+++ b/components/ui/AdminNavbar/AdminNavbar.module.css
@@ -3,7 +3,7 @@
 }
 
 .link {
-  @apply inline-flex items-center leading-6 font-medium transition ease-in-out duration-75 cursor-pointer text-yellow-500 rounded-md p-1;
+  @apply inline-flex items-center leading-6 font-medium transition ease-in-out duration-75 cursor-pointer text-black rounded-md p-1;
 }
 
 .link:hover {
